--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <TextView
+            android:text="77777777"
+            android:background="#FF0000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
 
     </com.zhangzheng.easyrichtext.RichTextLayout>
 
