--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <TextView
+            android:text="888888888"
+            app:layout_isUnderline="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:text="999999999"
+            app:layout_isStrikethrough="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
 
     </com.zhangzheng.easyrichtext.RichTextLayout>
 
