--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,56 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Hello World!" />
+
+    <com.zhangzheng.easyrichtext.RichTextLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="中华阿斯顿"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="撒打算的"
+            android:textColor="#FF0000"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="可以点击的11"
+            android:textStyle="bold"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="可以点击的333"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="333333"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="4444444"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="5555555"
+            android:textColor="#33FF00"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="5555555"
+            android:textColor="#33FF00"
+            android:layout_height="wrap_content"/>
+
+    </com.zhangzheng.easyrichtext.RichTextLayout>
 
 
     <com.zhangzheng.easyrichtext.RichTextLayout
@@ -41,10 +86,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+
+
         <TextView
             android:text="4444444"
             android:textStyle="bold"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <ImageView
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:src="@mipmap/ic_launcher"
             android:layout_height="wrap_content"/>
 
         <TextView
@@ -60,17 +113,34 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+
         <TextView
             android:text="77777777"
             android:background="#FF0000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:padding="10dp"
+            android:background="#33FF0000"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:text="我是自定义视图"
+                android:layout_height="wrap_content"/>
+
+        </FrameLayout>
+
         <TextView
             android:text="888888888"
             app:layout_isUnderline="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
+
 
         <TextView
             android:text="999999999"
