更新视图刷新事件

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
 
 
     <com.zhangzheng.easyrichtext.RichTextLayout
+        android:id="@+id/richTextLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
