--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,8 @@
         <TextView
             android:id="@+id/tv3"
             android:text="333333"
-            android:textColor="#FF0000"
+            android:enabled="false"
+            android:textColor="@color/order_text_enable_color"
             android:textSize="40dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
